# cc-hooks-py

./: .gitignore  CHANGELOG.md  Discussion.md  Makefile  PLAN.md  README.md  RELEASING.md  SUPPORT.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci.yml  publish.yml  release-pr-check.yml
examples/: async_slack_notify.py  block_prompt.py  claude_hooks_settings.json  deny_bash_rm.py  log_tool_usage.py  noop_any_hook.py  pre_compact_guard.py  session_start_context.py  simulate_claude_hooks.py  stop_block_unless_safe.py
schemas/models/: ConfigChangeInput.schema.json  ConfigChangeOutput.schema.json  NotificationInput.schema.json  NotificationOutput.schema.json  PermissionRequestInput.schema.json  PermissionRequestOutput.schema.json  PostToolUseFailureInput.schema.json  PostToolUseFailureOutput.schema.json  PostToolUseInput.schema.json  PostToolUseOutput.schema.json  PreCompactInput.schema.json  PreCompactOutput.schema.json  PreToolUseInput.schema.json  PreToolUseOutput.schema.json  SessionEndInput.schema.json  SessionEndOutput.schema.json  SessionStartInput.schema.json  (+13 more)
scripts/: check_release_readiness.py  e2e_all_hooks_payloads.py  e2e_claude_hooks.py  generate_schemas.py  smoke_import_wheel.py
tests/: conftest.py  test_claude_hooks_settings.py  test_contract_runner_output.py  test_examples_py_compile.py  test_examples_simulation.py  test_forward_compat_extra_fields.py  test_noop_any_hook.py  test_readme_python_snippets.py  test_registry.py  test_runner.py
(+56 files in other folders)
