[project]
name = "cc-hooks-py"
dynamic = ["version"]
description = "Type-safe Python library for Claude Code hooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "cc-hooks-py contributors" }]
keywords = ["claude", "hooks", "pydantic", "automation", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2.0,<3.0"]

[project.urls]
Homepage = "https://github.com/babashunsuke/cc-hooks-py"
Repository = "https://github.com/babashunsuke/cc-hooks-py"
Issues = "https://github.com/babashunsuke/cc-hooks-py/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hatch>=1.14",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "twine>=5.1",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_hooks"]

[tool.hatch.version]
path = "src/cc_hooks/__about__.py"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
